# multi-nanowire

./: .gitignore  Makefile.am  autogen.sh  charge_distribution.cpp  configure.ac  creat_array_coord.py  current.cpp  electron_supply.cpp  fit_potential.py  main.cpp  modify_potential_curve.py  plot.py  potential_at_point.py  readin.cpp
src/: Makefile.am  background.cpp  charge_distribution.cpp  coordinate.cpp  coordinate.h  current.cpp  current.h  electron_supply.cpp  electron_supply.h  emiss_potential_path.cpp  fit_potential.cpp  main.cpp  potential.cpp  potential.h  potential_interpolation.cpp  potential_interpolation.h  potential_section_long.cpp  potential_use_base.h  readin.cpp  transmission_probability.cpp  transmission_probability.h
