noinst_PROGRAMS = current.x fit_potential.x potential_section_long.x

current_x_SOURCES = electron_supply.cpp potential.cpp transmission_probability.cpp current.cpp main.cpp charge_distribution.cpp coordinate.cpp potential_interpolation.cpp background.cpp

fit_potential_x_SOURCES = fit_potential.cpp

potential_section_long_x_SOURCES = potential_section_long.cpp  potential.cpp charge_distribution.cpp  coordinate.cpp potential_interpolation.cpp  background.cpp

copy_to_top:
	-cp $(noinst_PROGRAMS) $(top_srcdir)/
